--- a/django/tutorial/firstapp/templates/firstapp/post.html
+++ b/django/tutorial/firstapp/templates/firstapp/post.html
@@ -1,4 +1,5 @@
-<form action="/first/req/post/" method="post">
+{% comment %} <form action="/first/req/post/" method="post"> {% endcomment %}
+<form action="{% url 'firstapp:post' %}" method="post">
     <input type="text" name="a"><br>
     <input type="text" name="b"><br>
     <input type="text" name="c"><br>
@@ -8,6 +9,7 @@
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script>
+    const url = '{% url "firstapp:post" %}';
     const data = axios( {
         url : 'https://ggoreb.com/dinosaur/info.jsp',
         method: 'get',
